greg/cpsl.output
Grammar

    0 $accept: Program $end

    1 Program: ConstantDecl TypeDecl VarDecl ProcFunc Block DOT_SYMBOL
    2        | ConstantDecl TypeDecl ProcFunc Block DOT_SYMBOL
    3        | ConstantDecl VarDecl ProcFunc Block DOT_SYMBOL
    4        | ConstantDecl ProcFunc Block DOT_SYMBOL
    5        | TypeDecl VarDecl ProcFunc Block DOT_SYMBOL
    6        | TypeDecl ProcFunc Block DOT_SYMBOL
    7        | VarDecl ProcFunc Block DOT_SYMBOL
    8        | ProcFunc Block DOT_SYMBOL

    9 ConstantDecl: CONST_SYMBOL ID_SYMBOL EQUAL_SYMBOL ConstExpression SEMI_COLON_SYMBOL ConstantStuff

   10 ConstantStuff: /* empty */
   11              | ID_SYMBOL EQUAL_SYMBOL ConstExpression SEMI_COLON_SYMBOL ConstantStuff

   12 ProcFunc: ProcedureDecl ProcFunc
   13         | FunctionDecl ProcFunc
   14         | /* empty */

   15 ProcedureDecl: PROCEDURE_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   16              | ProcStuff Body SEMI_COLON_SYMBOL

   17 ProcStuff: PROCEDURE_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL

   18 FunctionDecl: FUNCTION_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   19             | FuncStuff Body SEMI_COLON_SYMBOL

   20 FuncStuff: FUNCTION_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL

   21 FormalParameters: /* empty */
   22                 | VAR_SYMBOL IdentList COLON_SYMBOL Type ParamStuff
   23                 | IdentList COLON_SYMBOL Type ParamStuff

   24 ParamStuff: SEMI_COLON_SYMBOL VAR_SYMBOL IdentList COLON_SYMBOL Type ParamStuff
   25           | SEMI_COLON_SYMBOL IdentList COLON_SYMBOL Type ParamStuff
   26           | /* empty */

   27 Body: BodyStuff Block
   28     | Block

   29 BodyStuff: ConstantDecl TypeDecl VarDecl
   30          | ConstantDecl TypeDecl
   31          | ConstantDecl VarDecl
   32          | ConstantDecl
   33          | TypeDecl VarDecl
   34          | TypeDecl
   35          | VarDecl

   36 Block: BEGIN_SYMBOL StatementSequence END_SYMBOL

   37 TypeDecl: TypeBlah TypeStuff

   38 TypeBlah: TYPE_SYMBOL ID_SYMBOL EQUAL_SYMBOL Type SEMI_COLON_SYMBOL

   39 TypeStuff: /* empty */
   40          | ID_SYMBOL EQUAL_SYMBOL Type SEMI_COLON_SYMBOL TypeStuff

   41 Type: SimpleType
   42     | RecordType
   43     | ArrayType

   44 SimpleType: ID_SYMBOL

   45 RecordType: RECORD_SYMBOL RecordStuff END_SYMBOL

   46 RecordStuff: IdentList COLON_SYMBOL Type SEMI_COLON_SYMBOL RecordStuff
   47            | /* empty */

   48 ArrayType: ARRAY_SYMBOL LEFT_SQUARE_SYMBOL ConstExpression COLON_SYMBOL ConstExpression RIGHT_SQUARE_SYMBOL OF_SYMBOL Type

   49 IdentList: ID_SYMBOL IdentStuff

   50 IdentStuff: /* empty */
   51           | COMMA_SYMBOL ID_SYMBOL IdentStuff

   52 VarDecl: VAR_SYMBOL IdentList COLON_SYMBOL Type SEMI_COLON_SYMBOL VarStuff

   53 VarStuff: /* empty */
   54         | IdentList COLON_SYMBOL Type SEMI_COLON_SYMBOL VarStuff

   55 StatementSequence: Statement StatementStuff

   56 StatementStuff: /* empty */
   57               | SEMI_COLON_SYMBOL Statement StatementStuff

   58 Statement: Assignment
   59          | IfStatement
   60          | WhileStatement
   61          | RepeatStatement
   62          | ForStatement
   63          | StopStatement
   64          | ReturnStatement
   65          | ReadStatement
   66          | WriteStatement
   67          | ProcedureCall
   68          | NullStatement

   69 Assignment: LValue ASSIGN_SYMBOL Expression

   70 IfStatement: IF_SYMBOL Expression THEN_SYMBOL StatementSequence IfStuff ELSE_SYMBOL StatementSequence END_SYMBOL
   71            | IF_SYMBOL Expression THEN_SYMBOL StatementSequence IfStuff END_SYMBOL

   72 IfStuff: /* empty */
   73        | ELSEIF_SYMBOL Expression THEN_SYMBOL StatementSequence IfStuff

   74 WhileStatement: WHILE_SYMBOL Expression DO_SYMBOL StatementSequence END_SYMBOL

   75 RepeatStatement: REPEAT_SYMBOL StatementSequence UNTIL_SYMBOL Expression

   76 ForStatement: FOR_SYMBOL ID_SYMBOL ASSIGN_SYMBOL Expression TO_SYMBOL Expression DO_SYMBOL StatementSequence END_SYMBOL
   77             | FOR_SYMBOL ID_SYMBOL ASSIGN_SYMBOL Expression DOWNTO_SYMBOL Expression DO_SYMBOL StatementSequence END_SYMBOL

   78 StopStatement: STOP_SYMBOL

   79 ReturnStatement: RETURN_SYMBOL Expression
   80                | RETURN_SYMBOL

   81 ReadStatement: READ_SYMBOL LEFT_BRACE_SYMBOL LValue ReadStuff RIGHT_BRACE_SYMBOL

   82 ReadStuff: COMMA_SYMBOL LValue ReadStuff
   83          | /* empty */

   84 WriteStatement: WRITE_SYMBOL LEFT_BRACE_SYMBOL Expression WriteStuff RIGHT_BRACE_SYMBOL

   85 WriteStuff: /* empty */
   86           | COMMA_SYMBOL Expression WriteStuff

   87 ProcedureCall: ID_SYMBOL LEFT_BRACE_SYMBOL Expression ProcedureStuff RIGHT_BRACE_SYMBOL
   88              | ID_SYMBOL LEFT_BRACE_SYMBOL RIGHT_BRACE_SYMBOL

   89 ProcedureStuff: /* empty */
   90               | COMMA_SYMBOL Expression ProcedureStuff

   91 NullStatement: /* empty */

   92 Expression: Expression OR_SYMBOL Expression
   93           | Expression AND_SYMBOL Expression
   94           | Expression EQUAL_SYMBOL Expression
   95           | Expression NOT_EQUAL_SYMBOL Expression
   96           | Expression LESS_EQUAL_SYMBOL Expression
   97           | Expression GREAT_EQUAL_SYMBOL Expression
   98           | Expression LESS_SYMBOL Expression
   99           | Expression GREAT_SYMBOL Expression
  100           | Expression ADD_SYMBOL Expression
  101           | Expression SUB_SYMBOL Expression
  102           | Expression MULT_SYMBOL Expression
  103           | Expression DIV_SYMBOL Expression
  104           | Expression PERCENT_SYMBOL Expression
  105           | NOT_SYMBOL Expression
  106           | SUB_SYMBOL Expression
  107           | LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
  108           | ID_SYMBOL LEFT_BRACE_SYMBOL RIGHT_BRACE_SYMBOL
  109           | ID_SYMBOL LEFT_BRACE_SYMBOL Expression ExpressionStuff RIGHT_BRACE_SYMBOL
  110           | CHR_SYMBOL LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
  111           | ORD_SYMBOL LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
  112           | PRED_SYMBOL LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
  113           | SUCC_SYMBOL LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
  114           | INTEGER_SYMBOL
  115           | CHARACTER_SYMBOL
  116           | STRING_SYMBOL
  117           | LValue

  118 ExpressionStuff: COMMA_SYMBOL Expression ExpressionStuff
  119                | /* empty */

  120 LValue: ID_SYMBOL
  121       | ID_SYMBOL DOT_SYMBOL ID_SYMBOL LValueStuff
  122       | ID_SYMBOL LEFT_SQUARE_SYMBOL Expression RIGHT_SQUARE_SYMBOL LValueStuff

  123 LValueStuff: DOT_SYMBOL ID_SYMBOL LValueStuff
  124            | LEFT_SQUARE_SYMBOL Expression RIGHT_SQUARE_SYMBOL LValueStuff
  125            | /* empty */

  126 ConstExpression: ConstExpression OR_SYMBOL ConstExpression
  127                | ConstExpression AND_SYMBOL ConstExpression
  128                | ConstExpression EQUAL_SYMBOL ConstExpression
  129                | ConstExpression NOT_EQUAL_SYMBOL ConstExpression
  130                | ConstExpression LESS_EQUAL_SYMBOL ConstExpression
  131                | ConstExpression GREAT_EQUAL_SYMBOL ConstExpression
  132                | ConstExpression LESS_SYMBOL ConstExpression
  133                | ConstExpression GREAT_SYMBOL ConstExpression
  134                | ConstExpression ADD_SYMBOL ConstExpression
  135                | ConstExpression SUB_SYMBOL ConstExpression
  136                | ConstExpression MULT_SYMBOL ConstExpression
  137                | ConstExpression DIV_SYMBOL ConstExpression
  138                | ConstExpression PERCENT_SYMBOL ConstExpression
  139                | NOT_SYMBOL ConstExpression
  140                | SUB_SYMBOL ConstExpression
  141                | LEFT_BRACE_SYMBOL ConstExpression RIGHT_BRACE_SYMBOL
  142                | INTEGER_SYMBOL
  143                | CHARACTER_SYMBOL
  144                | STRING_SYMBOL
  145                | ID_SYMBOL


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER_SYMBOL (258) 114 142
STRING_SYMBOL (259) 116 144
ID_SYMBOL (260) 9 11 15 17 18 20 38 40 44 49 51 76 77 87 88 108 109
    120 121 122 123 145
CHARACTER_SYMBOL (261) 115 143
ADD_SYMBOL (262) 100 134
AND_SYMBOL (263) 93 127
ARRAY_SYMBOL (264) 48
ASSIGN_SYMBOL (265) 69 76 77
BEGIN_SYMBOL (266) 36
CHR_SYMBOL (267) 110
COLON_SYMBOL (268) 18 20 22 23 24 25 46 48 52 54
COMMA_SYMBOL (269) 51 82 86 90 118
CONST_SYMBOL (270) 9
DIV_SYMBOL (271) 103 137
DO_SYMBOL (272) 74 76 77
DOT_SYMBOL (273) 1 2 3 4 5 6 7 8 121 123
DOWNTO_SYMBOL (274) 77
ELSE_SYMBOL (275) 70
ELSEIF_SYMBOL (276) 73
END_SYMBOL (277) 36 45 70 71 74 76 77
EQUAL_SYMBOL (278) 9 11 38 40 94 128
FOR_SYMBOL (279) 76 77
FORWARD_SYMBOL (280) 15 18
FUNCTION_SYMBOL (281) 18 20
GREAT_EQUAL_SYMBOL (282) 97 131
GREAT_SYMBOL (283) 99 133
IF_SYMBOL (284) 70 71
LEFT_BRACE_SYMBOL (285) 15 17 18 20 81 84 87 88 107 108 109 110 111
    112 113 141
LEFT_SQUARE_SYMBOL (286) 48 122 124
LESS_SYMBOL (287) 98 132
LESS_EQUAL_SYMBOL (288) 96 130
MULT_SYMBOL (289) 102 136
NOT_SYMBOL (290) 105 139
NOT_EQUAL_SYMBOL (291) 95 129
OF_SYMBOL (292) 48
OR_SYMBOL (293) 92 126
ORD_SYMBOL (294) 111
PERCENT_SYMBOL (295) 104 138
PRED_SYMBOL (296) 112
PROCEDURE_SYMBOL (297) 15 17
READ_SYMBOL (298) 81
RECORD_SYMBOL (299) 45
REPEAT_SYMBOL (300) 75
RETURN_SYMBOL (301) 79 80
RIGHT_BRACE_SYMBOL (302) 15 17 18 20 81 84 87 88 107 108 109 110 111
    112 113 141
RIGHT_SQUARE_SYMBOL (303) 48 122 124
SEMI_COLON_SYMBOL (304) 9 11 15 16 17 18 19 20 24 25 38 40 46 52 54
    57
STOP_SYMBOL (305) 78
SUB_SYMBOL (306) 101 106 135 140
SUCC_SYMBOL (307) 113
THEN_SYMBOL (308) 70 71 73
TO_SYMBOL (309) 76
TYPE_SYMBOL (310) 38
UNTIL_SYMBOL (311) 75
UNARY_MINUS_SYMBOL (312)
VAR_SYMBOL (313) 22 24 52
WHILE_SYMBOL (314) 74
WRITE_SYMBOL (315) 84


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
Program (62)
    on left: 1 2 3 4 5 6 7 8, on right: 0
ConstantDecl (63)
    on left: 9, on right: 1 2 3 4 29 30 31 32
ConstantStuff (64)
    on left: 10 11, on right: 9 11
ProcFunc (65)
    on left: 12 13 14, on right: 1 2 3 4 5 6 7 8 12 13
ProcedureDecl (66)
    on left: 15 16, on right: 12
ProcStuff (67)
    on left: 17, on right: 16
FunctionDecl (68)
    on left: 18 19, on right: 13
FuncStuff (69)
    on left: 20, on right: 19
FormalParameters (70)
    on left: 21 22 23, on right: 15 17 18 20
ParamStuff (71)
    on left: 24 25 26, on right: 22 23 24 25
Body (72)
    on left: 27 28, on right: 16 19
BodyStuff (73)
    on left: 29 30 31 32 33 34 35, on right: 27
Block (74)
    on left: 36, on right: 1 2 3 4 5 6 7 8 27 28
TypeDecl (75)
    on left: 37, on right: 1 2 5 6 29 30 33 34
TypeBlah (76)
    on left: 38, on right: 37
TypeStuff (77)
    on left: 39 40, on right: 37 40
Type (78)
    on left: 41 42 43, on right: 18 20 22 23 24 25 38 40 46 48 52 54
SimpleType (79)
    on left: 44, on right: 41
RecordType (80)
    on left: 45, on right: 42
RecordStuff (81)
    on left: 46 47, on right: 45 46
ArrayType (82)
    on left: 48, on right: 43
IdentList (83)
    on left: 49, on right: 22 23 24 25 46 52 54
IdentStuff (84)
    on left: 50 51, on right: 49 51
VarDecl (85)
    on left: 52, on right: 1 3 5 7 29 31 33 35
VarStuff (86)
    on left: 53 54, on right: 52 54
StatementSequence (87)
    on left: 55, on right: 36 70 71 73 74 75 76 77
StatementStuff (88)
    on left: 56 57, on right: 55 57
Statement (89)
    on left: 58 59 60 61 62 63 64 65 66 67 68, on right: 55 57
Assignment (90)
    on left: 69, on right: 58
IfStatement (91)
    on left: 70 71, on right: 59
IfStuff (92)
    on left: 72 73, on right: 70 71 73
WhileStatement (93)
    on left: 74, on right: 60
RepeatStatement (94)
    on left: 75, on right: 61
ForStatement (95)
    on left: 76 77, on right: 62
StopStatement (96)
    on left: 78, on right: 63
ReturnStatement (97)
    on left: 79 80, on right: 64
ReadStatement (98)
    on left: 81, on right: 65
ReadStuff (99)
    on left: 82 83, on right: 81 82
WriteStatement (100)
    on left: 84, on right: 66
WriteStuff (101)
    on left: 85 86, on right: 84 86
ProcedureCall (102)
    on left: 87 88, on right: 67
ProcedureStuff (103)
    on left: 89 90, on right: 87 90
NullStatement (104)
    on left: 91, on right: 68
Expression (105)
    on left: 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
    108 109 110 111 112 113 114 115 116 117, on right: 69 70 71 73
    74 75 76 77 79 84 86 87 90 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 107 109 110 111 112 113 118 122 124
ExpressionStuff (106)
    on left: 118 119, on right: 109 118
LValue (107)
    on left: 120 121 122, on right: 69 81 82 117
LValueStuff (108)
    on left: 123 124 125, on right: 121 122 123 124
ConstExpression (109)
    on left: 126 127 128 129 130 131 132 133 134 135 136 137 138 139
    140 141 142 143 144 145, on right: 9 11 48 126 127 128 129 130
    131 132 133 134 135 136 137 138 139 140 141


state 0

    0 $accept: . Program $end

    CONST_SYMBOL      shift, and go to state 1
    FUNCTION_SYMBOL   shift, and go to state 2
    PROCEDURE_SYMBOL  shift, and go to state 3
    TYPE_SYMBOL       shift, and go to state 4
    VAR_SYMBOL        shift, and go to state 5

    $default  reduce using rule 14 (ProcFunc)

    Program        go to state 6
    ConstantDecl   go to state 7
    ProcFunc       go to state 8
    ProcedureDecl  go to state 9
    ProcStuff      go to state 10
    FunctionDecl   go to state 11
    FuncStuff      go to state 12
    TypeDecl       go to state 13
    TypeBlah       go to state 14
    VarDecl        go to state 15


state 1

    9 ConstantDecl: CONST_SYMBOL . ID_SYMBOL EQUAL_SYMBOL ConstExpression SEMI_COLON_SYMBOL ConstantStuff

    ID_SYMBOL  shift, and go to state 16


state 2

   18 FunctionDecl: FUNCTION_SYMBOL . ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   20 FuncStuff: FUNCTION_SYMBOL . ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL

    ID_SYMBOL  shift, and go to state 17


state 3

   15 ProcedureDecl: PROCEDURE_SYMBOL . ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   17 ProcStuff: PROCEDURE_SYMBOL . ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL

    ID_SYMBOL  shift, and go to state 18


state 4

   38 TypeBlah: TYPE_SYMBOL . ID_SYMBOL EQUAL_SYMBOL Type SEMI_COLON_SYMBOL

    ID_SYMBOL  shift, and go to state 19


state 5

   52 VarDecl: VAR_SYMBOL . IdentList COLON_SYMBOL Type SEMI_COLON_SYMBOL VarStuff

    ID_SYMBOL  shift, and go to state 20

    IdentList  go to state 21


state 6

    0 $accept: Program . $end

    $end  shift, and go to state 22


state 7

    1 Program: ConstantDecl . TypeDecl VarDecl ProcFunc Block DOT_SYMBOL
    2        | ConstantDecl . TypeDecl ProcFunc Block DOT_SYMBOL
    3        | ConstantDecl . VarDecl ProcFunc Block DOT_SYMBOL
    4        | ConstantDecl . ProcFunc Block DOT_SYMBOL

    FUNCTION_SYMBOL   shift, and go to state 2
    PROCEDURE_SYMBOL  shift, and go to state 3
    TYPE_SYMBOL       shift, and go to state 4
    VAR_SYMBOL        shift, and go to state 5

    $default  reduce using rule 14 (ProcFunc)

    ProcFunc       go to state 23
    ProcedureDecl  go to state 9
    ProcStuff      go to state 10
    FunctionDecl   go to state 11
    FuncStuff      go to state 12
    TypeDecl       go to state 24
    TypeBlah       go to state 14
    VarDecl        go to state 25


state 8

    8 Program: ProcFunc . Block DOT_SYMBOL

    BEGIN_SYMBOL  shift, and go to state 26

    Block  go to state 27


state 9

   12 ProcFunc: ProcedureDecl . ProcFunc

    FUNCTION_SYMBOL   shift, and go to state 2
    PROCEDURE_SYMBOL  shift, and go to state 3

    $default  reduce using rule 14 (ProcFunc)

    ProcFunc       go to state 28
    ProcedureDecl  go to state 9
    ProcStuff      go to state 10
    FunctionDecl   go to state 11
    FuncStuff      go to state 12


state 10

   16 ProcedureDecl: ProcStuff . Body SEMI_COLON_SYMBOL

    BEGIN_SYMBOL  shift, and go to state 26
    CONST_SYMBOL  shift, and go to state 1
    TYPE_SYMBOL   shift, and go to state 4
    VAR_SYMBOL    shift, and go to state 5

    ConstantDecl  go to state 29
    Body          go to state 30
    BodyStuff     go to state 31
    Block         go to state 32
    TypeDecl      go to state 33
    TypeBlah      go to state 14
    VarDecl       go to state 34


state 11

   13 ProcFunc: FunctionDecl . ProcFunc

    FUNCTION_SYMBOL   shift, and go to state 2
    PROCEDURE_SYMBOL  shift, and go to state 3

    $default  reduce using rule 14 (ProcFunc)

    ProcFunc       go to state 35
    ProcedureDecl  go to state 9
    ProcStuff      go to state 10
    FunctionDecl   go to state 11
    FuncStuff      go to state 12


state 12

   19 FunctionDecl: FuncStuff . Body SEMI_COLON_SYMBOL

    BEGIN_SYMBOL  shift, and go to state 26
    CONST_SYMBOL  shift, and go to state 1
    TYPE_SYMBOL   shift, and go to state 4
    VAR_SYMBOL    shift, and go to state 5

    ConstantDecl  go to state 29
    Body          go to state 36
    BodyStuff     go to state 31
    Block         go to state 32
    TypeDecl      go to state 33
    TypeBlah      go to state 14
    VarDecl       go to state 34


state 13

    5 Program: TypeDecl . VarDecl ProcFunc Block DOT_SYMBOL
    6        | TypeDecl . ProcFunc Block DOT_SYMBOL

    FUNCTION_SYMBOL   shift, and go to state 2
    PROCEDURE_SYMBOL  shift, and go to state 3
    VAR_SYMBOL        shift, and go to state 5

    $default  reduce using rule 14 (ProcFunc)

    ProcFunc       go to state 37
    ProcedureDecl  go to state 9
    ProcStuff      go to state 10
    FunctionDecl   go to state 11
    FuncStuff      go to state 12
    VarDecl        go to state 38


state 14

   37 TypeDecl: TypeBlah . TypeStuff

    ID_SYMBOL  shift, and go to state 39

    $default  reduce using rule 39 (TypeStuff)

    TypeStuff  go to state 40


state 15

    7 Program: VarDecl . ProcFunc Block DOT_SYMBOL

    FUNCTION_SYMBOL   shift, and go to state 2
    PROCEDURE_SYMBOL  shift, and go to state 3

    $default  reduce using rule 14 (ProcFunc)

    ProcFunc       go to state 41
    ProcedureDecl  go to state 9
    ProcStuff      go to state 10
    FunctionDecl   go to state 11
    FuncStuff      go to state 12


state 16

    9 ConstantDecl: CONST_SYMBOL ID_SYMBOL . EQUAL_SYMBOL ConstExpression SEMI_COLON_SYMBOL ConstantStuff

    EQUAL_SYMBOL  shift, and go to state 42


state 17

   18 FunctionDecl: FUNCTION_SYMBOL ID_SYMBOL . LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   20 FuncStuff: FUNCTION_SYMBOL ID_SYMBOL . LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL

    LEFT_BRACE_SYMBOL  shift, and go to state 43


state 18

   15 ProcedureDecl: PROCEDURE_SYMBOL ID_SYMBOL . LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   17 ProcStuff: PROCEDURE_SYMBOL ID_SYMBOL . LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL

    LEFT_BRACE_SYMBOL  shift, and go to state 44


state 19

   38 TypeBlah: TYPE_SYMBOL ID_SYMBOL . EQUAL_SYMBOL Type SEMI_COLON_SYMBOL

    EQUAL_SYMBOL  shift, and go to state 45


state 20

   49 IdentList: ID_SYMBOL . IdentStuff

    COMMA_SYMBOL  shift, and go to state 46

    $default  reduce using rule 50 (IdentStuff)

    IdentStuff  go to state 47


state 21

   52 VarDecl: VAR_SYMBOL IdentList . COLON_SYMBOL Type SEMI_COLON_SYMBOL VarStuff

    COLON_SYMBOL  shift, and go to state 48


state 22

    0 $accept: Program $end .

    $default  accept


state 23

    4 Program: ConstantDecl ProcFunc . Block DOT_SYMBOL

    BEGIN_SYMBOL  shift, and go to state 26

    Block  go to state 49


state 24

    1 Program: ConstantDecl TypeDecl . VarDecl ProcFunc Block DOT_SYMBOL
    2        | ConstantDecl TypeDecl . ProcFunc Block DOT_SYMBOL

    FUNCTION_SYMBOL   shift, and go to state 2
    PROCEDURE_SYMBOL  shift, and go to state 3
    VAR_SYMBOL        shift, and go to state 5

    $default  reduce using rule 14 (ProcFunc)

    ProcFunc       go to state 50
    ProcedureDecl  go to state 9
    ProcStuff      go to state 10
    FunctionDecl   go to state 11
    FuncStuff      go to state 12
    VarDecl        go to state 51


state 25

    3 Program: ConstantDecl VarDecl . ProcFunc Block DOT_SYMBOL

    FUNCTION_SYMBOL   shift, and go to state 2
    PROCEDURE_SYMBOL  shift, and go to state 3

    $default  reduce using rule 14 (ProcFunc)

    ProcFunc       go to state 52
    ProcedureDecl  go to state 9
    ProcStuff      go to state 10
    FunctionDecl   go to state 11
    FuncStuff      go to state 12


state 26

   36 Block: BEGIN_SYMBOL . StatementSequence END_SYMBOL

    ID_SYMBOL      shift, and go to state 53
    FOR_SYMBOL     shift, and go to state 54
    IF_SYMBOL      shift, and go to state 55
    READ_SYMBOL    shift, and go to state 56
    REPEAT_SYMBOL  shift, and go to state 57
    RETURN_SYMBOL  shift, and go to state 58
    STOP_SYMBOL    shift, and go to state 59
    WHILE_SYMBOL   shift, and go to state 60
    WRITE_SYMBOL   shift, and go to state 61

    $default  reduce using rule 91 (NullStatement)

    StatementSequence  go to state 62
    Statement          go to state 63
    Assignment         go to state 64
    IfStatement        go to state 65
    WhileStatement     go to state 66
    RepeatStatement    go to state 67
    ForStatement       go to state 68
    StopStatement      go to state 69
    ReturnStatement    go to state 70
    ReadStatement      go to state 71
    WriteStatement     go to state 72
    ProcedureCall      go to state 73
    NullStatement      go to state 74
    LValue             go to state 75


state 27

    8 Program: ProcFunc Block . DOT_SYMBOL

    DOT_SYMBOL  shift, and go to state 76


state 28

   12 ProcFunc: ProcedureDecl ProcFunc .

    $default  reduce using rule 12 (ProcFunc)


state 29

   29 BodyStuff: ConstantDecl . TypeDecl VarDecl
   30          | ConstantDecl . TypeDecl
   31          | ConstantDecl . VarDecl
   32          | ConstantDecl .

    TYPE_SYMBOL  shift, and go to state 4
    VAR_SYMBOL   shift, and go to state 5

    $default  reduce using rule 32 (BodyStuff)

    TypeDecl  go to state 77
    TypeBlah  go to state 14
    VarDecl   go to state 78


state 30

   16 ProcedureDecl: ProcStuff Body . SEMI_COLON_SYMBOL

    SEMI_COLON_SYMBOL  shift, and go to state 79


state 31

   27 Body: BodyStuff . Block

    BEGIN_SYMBOL  shift, and go to state 26

    Block  go to state 80


state 32

   28 Body: Block .

    $default  reduce using rule 28 (Body)


state 33

   33 BodyStuff: TypeDecl . VarDecl
   34          | TypeDecl .

    VAR_SYMBOL  shift, and go to state 5

    $default  reduce using rule 34 (BodyStuff)

    VarDecl  go to state 81


state 34

   35 BodyStuff: VarDecl .

    $default  reduce using rule 35 (BodyStuff)


state 35

   13 ProcFunc: FunctionDecl ProcFunc .

    $default  reduce using rule 13 (ProcFunc)


state 36

   19 FunctionDecl: FuncStuff Body . SEMI_COLON_SYMBOL

    SEMI_COLON_SYMBOL  shift, and go to state 82


state 37

    6 Program: TypeDecl ProcFunc . Block DOT_SYMBOL

    BEGIN_SYMBOL  shift, and go to state 26

    Block  go to state 83


state 38

    5 Program: TypeDecl VarDecl . ProcFunc Block DOT_SYMBOL

    FUNCTION_SYMBOL   shift, and go to state 2
    PROCEDURE_SYMBOL  shift, and go to state 3

    $default  reduce using rule 14 (ProcFunc)

    ProcFunc       go to state 84
    ProcedureDecl  go to state 9
    ProcStuff      go to state 10
    FunctionDecl   go to state 11
    FuncStuff      go to state 12


state 39

   40 TypeStuff: ID_SYMBOL . EQUAL_SYMBOL Type SEMI_COLON_SYMBOL TypeStuff

    EQUAL_SYMBOL  shift, and go to state 85


state 40

   37 TypeDecl: TypeBlah TypeStuff .

    $default  reduce using rule 37 (TypeDecl)


state 41

    7 Program: VarDecl ProcFunc . Block DOT_SYMBOL

    BEGIN_SYMBOL  shift, and go to state 26

    Block  go to state 86


state 42

    9 ConstantDecl: CONST_SYMBOL ID_SYMBOL EQUAL_SYMBOL . ConstExpression SEMI_COLON_SYMBOL ConstantStuff

    INTEGER_SYMBOL     shift, and go to state 87
    STRING_SYMBOL      shift, and go to state 88
    ID_SYMBOL          shift, and go to state 89
    CHARACTER_SYMBOL   shift, and go to state 90
    LEFT_BRACE_SYMBOL  shift, and go to state 91
    NOT_SYMBOL         shift, and go to state 92
    SUB_SYMBOL         shift, and go to state 93

    ConstExpression  go to state 94


state 43

   18 FunctionDecl: FUNCTION_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL . FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   20 FuncStuff: FUNCTION_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL . FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL

    ID_SYMBOL   shift, and go to state 20
    VAR_SYMBOL  shift, and go to state 95

    $default  reduce using rule 21 (FormalParameters)

    FormalParameters  go to state 96
    IdentList         go to state 97


state 44

   15 ProcedureDecl: PROCEDURE_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL . FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   17 ProcStuff: PROCEDURE_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL . FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL

    ID_SYMBOL   shift, and go to state 20
    VAR_SYMBOL  shift, and go to state 95

    $default  reduce using rule 21 (FormalParameters)

    FormalParameters  go to state 98
    IdentList         go to state 97


state 45

   38 TypeBlah: TYPE_SYMBOL ID_SYMBOL EQUAL_SYMBOL . Type SEMI_COLON_SYMBOL

    ID_SYMBOL      shift, and go to state 99
    ARRAY_SYMBOL   shift, and go to state 100
    RECORD_SYMBOL  shift, and go to state 101

    Type        go to state 102
    SimpleType  go to state 103
    RecordType  go to state 104
    ArrayType   go to state 105


state 46

   51 IdentStuff: COMMA_SYMBOL . ID_SYMBOL IdentStuff

    ID_SYMBOL  shift, and go to state 106


state 47

   49 IdentList: ID_SYMBOL IdentStuff .

    $default  reduce using rule 49 (IdentList)


state 48

   52 VarDecl: VAR_SYMBOL IdentList COLON_SYMBOL . Type SEMI_COLON_SYMBOL VarStuff

    ID_SYMBOL      shift, and go to state 99
    ARRAY_SYMBOL   shift, and go to state 100
    RECORD_SYMBOL  shift, and go to state 101

    Type        go to state 107
    SimpleType  go to state 103
    RecordType  go to state 104
    ArrayType   go to state 105


state 49

    4 Program: ConstantDecl ProcFunc Block . DOT_SYMBOL

    DOT_SYMBOL  shift, and go to state 108


state 50

    2 Program: ConstantDecl TypeDecl ProcFunc . Block DOT_SYMBOL
